# sauron

./: Cargo.toml  README.md
.github/workflows/: pipeline.yml  rust.yml
dev/cdk/: .gitignore  package-lock.json  package.json
dev/cdk/lib/: app.ts  lambda.ts  sauron_stack.ts  step_functions.ts
src/: args.rs  lib.rs  main.rs
src/actions/: dummy_action.rs  fetch_log_groups_action.rs  mod.rs  tail_logs_action.rs
src/aws/: cloudwatch.rs  mod.rs  model.rs
src/model/: error.rs
tests/: execute_query_test.rs  list_log_groups_test.rs  list_log_streams_test.rs  list_queries_test.rs
