[package]
name = "cw-sauron"
version = "1.0.0"
edition = "2021"
description = "Cloudwatch CLI Tool"
license = "MIT"
repository = "https://github.com/dawsonfi/sauron"

[dependencies]
aws-config = "0.10.1"
aws-sdk-cloudwatchlogs = "0.10.1"
aws-smithy-types = "0.40.2"
aws-smithy-http = "0.40.2"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
mockall_double = "0.2.1"
mockall = "0.11.0"
async-trait = "0.1.53"
derive_builder = "0.11.1"
clap = { version = "3.1.9", features = ["cargo"] }