[package]
name = "cw-sauron"
version = "1.0.5"
edition = "2021"
description = "Cloudwatch CLI Tool"
license = "MIT"
repository = "https://github.com/dawsonfi/sauron"

[dependencies]
aws-config = "0.55.2"
aws-sdk-cloudwatchlogs = "0.27.0"
aws-smithy-types = "0.55.2"
aws-smithy-http = "0.55.2"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
mockall_double = "0.3.0"
mockall = "0.11.0"
derive_builder = "0.12.0"
clap = { version = "4.2.7", features = ["cargo", "derive"] }
async-trait = "0.1.68"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
dialoguer = "0.10.0"
indicatif = "0.17.3"
console = "0.15.0"